--- a/shopping-app/src/App.css
+++ b/shopping-app/src/App.css
@@ -202,6 +202,12 @@
   right: 3%;
   bottom: 28%;
   color: rgba(223, 223, 223, 0.85);
+  cursor: pointer;
+}
+
+.active {
+  color:rgb(252, 222, 22);
+  /* 북마크에 추가되었습니다 애니메이션 구현 */
 }
 
 .modal_star {
