--- a/shopping-app/src/App.css
+++ b/shopping-app/src/App.css
@@ -268,3 +268,31 @@
   cursor: pointer;
 }
 
+.category-list {
+  display: flex;
+  justify-content: space-around;
+  width: 600px;
+  position: absolute;
+  top: 13%;
+  left: 29.5%;
+}
+
+.category{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.category-img {
+  width: 82px;
+  height: 82px;
+  margin-bottom: 10px;
+}
+
+.category-title {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  line-height: 19px;
+}
+
