--- a/shopping-app/src/App.css
+++ b/shopping-app/src/App.css
@@ -105,7 +105,6 @@
 }
 
 .main {
-  min-height: calc(100vh - 142px);
   margin-top: 30px;
   display: flex;
   justify-content: center;
@@ -115,10 +114,11 @@
 
 .product-list {
   display: flex;
+  width: 1128px;
   list-style: none;
   justify-content: space-between;
   padding: 0;
-  width: 100%;
+  flex-wrap: wrap;
 }
 
 .product_img {
@@ -198,6 +198,7 @@
 
 .product {
   position: relative;
+  width: 264px;
 }
 .star {
   width: 24px;
@@ -281,6 +282,10 @@
   left: 29.5%;
 }
 
+.categories{
+  text-decoration: none;
+}
+
 .category{
   display: flex;
   flex-direction: column;
@@ -298,5 +303,36 @@
   font-style: normal;
   font-weight: 700;
   line-height: 19px;
+  color: black;
+  text-decoration:none;
+}
+
+.category-block {
+  display: flex;
+  padding: 1rem;
+  width: 768px;
+  margin: 0 auto;
+}
+
+.category-area {
+  font-size: 1.125rem;
+  cursor: pointer;
+  white-space: pre;
+  text-decoration: none;
+  color: inherit;
+  padding-bottom: 0.25rem;
+
+  &:hover{
+    color: #495057;
+}
+}
+
+.focus {
+  color: #452CDD;
+}
+
+.product-container {
+  position: absolute;
+  top:30%;
 }
 
